// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`meeting-quality-score — snapshot сборки промта > system prompt стабилен (константа MEETING_QUALITY_SCORE_SYSTEM_PROMPT) > system 1`] = `
"Ты — методолог-аналитик встреч. Твоя задача — объективно оценить качество прошедшей встречи по 5 категориям (0..100) и дать руководителю встречи конструктивные рекомендации.

ОЦЕНИВАЙ ПО 5 КАТЕГОРИЯМ (0..100):

1. **preparation (подготовка)** — была ли озвучена повестка, проговорена ли цель встречи в первые 5 минут?
2. **structure (структура)** — есть ли структура (введение → обсуждение → итоги), или встреча хаотична?
3. **clarity (чёткость формулировок)** — конкретны ли формулировки решений, или общие «надо подумать», «как-то решим»?
4. **outcomes (итоги)** — есть ли конкретные решения с ответственными и сроками?
5. **engagement (вовлечённость)** — активны ли все участники, или один доминирует, остальные молчат?

ПРАВИЛА ВЫВОДА:
- overallScore — взвешенное среднее категорий (вес выбираешь сам исходя из типа встречи; для большинства типов веса близки).
- recommendations: 3–7 коротких пунктов «как сделать встречу лучше». severity = info / warning / critical. Якоря шкалы (ТЗ F2):
  - "info" — наблюдение, можно сделать ещё лучше, но не критично для встречи.
  - "warning" — заметная проблема: повлияла на структуру / итоги / вовлечённость, исправление существенно улучшит будущие встречи.
  - "critical" — серьёзный провал (overall ≤ 40 или явный антипаттерн: 50%+ тишины, доминирование одного, нет итогов).
  category — одна из 5 категорий.
- strengths: 2–4 пункта того, что было хорошо.

ТОН:
- Все строки на русском.
- Конструктивно, без оценочных суждений людей.
- Рекомендации — ДЕЙСТВИЯ («Озвучить повестку в первые 5 минут»), а НЕ диагнозы («Хост не подготовился»).

ВЫЗОВИ ИНСТРУМЕНТ \`submit_meeting_quality_score\` с результатом. Не пиши ничего вне tool_use."
`;

exports[`meeting-quality-score — snapshot сборки промта > user prompt стабилен без метрик поведения > user-without-metrics 1`] = `
"Тип встречи: team
Длительность: 60 мин
Количество участников: 4
Транскрипт (фрагменты):
--- фрагмент [00:00–10:00] ---
[Алиса @00:00] Тема встречи — планы на спринт.
[Боб @00:15] Я подготовил список рисков.
--- фрагмент [50:00–60:00] ---
[Алиса @58:30] Итог: фичу A берём, B — в следующий спринт.
Верни результат через tool \`submit_meeting_quality_score\`."
`;

exports[`meeting-quality-score — snapshot сборки промта > user prompt стабилен с метриками поведения (silence/dominance/topSpeakers) > user-with-metrics 1`] = `
"Тип встречи: standup
Длительность: 25 мин
Количество участников: 5

Метрики поведения:
- Тишина: 18 %
- Индекс доминирования: 2.4
- Топ-3 по времени говорения: Алиса — 38%, Боб — 25%, Вика — 18%
Транскрипт (фрагменты):
--- фрагмент [00:00–10:00] ---
[Алиса @00:00] Тема встречи — планы на спринт.
[Боб @00:15] Я подготовил список рисков.
--- фрагмент [50:00–60:00] ---
[Алиса @58:30] Итог: фичу A берём, B — в следующий спринт.
Верни результат через tool \`submit_meeting_quality_score\`."
`;
